--- a/owncloud/resources/001-owncloud.conf
+++ b/owncloud/resources/001-owncloud.conf
@@ -15,7 +15,7 @@
                 allow from all
         </Directory>
         SSLEngine on
-        SSLCertificateFile /etc/apache2/ssl/apache.crt
-        SSLCertificateKeyFile /etc/apache2/ssl/apache.key
+        SSLCertificateFile /etc/apache2/ssl/server.crt
+        SSLCertificateKeyFile /etc/apache2/ssl/server.key
 </VirtualHost>
 
