[iTunes] Refactor for automated build
Updated Dockerfile which should build a working image without any manual
intervention.

Included README now outlines steps required to run.

Tested as far as launching and logging in to my Apple iTunes account and
then streaming a couple of tracks.

--- a/itunes/Dockerfile
+++ b/itunes/Dockerfile
@@ -6,9 +6,10 @@ RUN dnf -y update \
 
 ENV HOME /home/user
 ENV WINEARCH win32
+
 RUN adduser -u 1001 user \
-        && mkdir -p $HOME/.wine \
-        && chown -R user:user $HOME
+    && mkdir -p $HOME/.wine \
+    && chown -R user:user $HOME
 
 RUN mkdir -p /extracted \
     && cd /extracted && wget -q -O itunes-installer.exe https://secure-appldnld.apple.com/itunes12/091-81691-20180709-C98EBAE5-D5C5-41EC-9847-A5F71D9C4437/iTunesSetup.exe \
@@ -18,28 +19,14 @@ RUN winetricks --self-update
 
 USER user
 
-# RUN su user -c "winetricks gdiplus msls31 msxml3"
+RUN winetricks -q gdiplus msls31 msxml3
 
-# Last mile installation, needs GUI
-# winecfg - set it to Windows 7
-# winetricks ie8
-# winetricks msxml3
-# winetricks msls31
-# cd /extracted/
-# 7za e itunes-installer.exe 
-# msiexec /i AppleSoftwareUpdate.msi 
-# msiexec /i AppleApplicationSupport.msi 
-# msiexec /i AppleApplicationSupport.msi 
-# msiexec /i Bonjour.msi 
-# msiexec /i iTunes.msi 
-# Then exit and commit this with docker commit itunes itunes:installed
+RUN cd /extracted/  \
+    && 7za e itunes-installer.exe  \
+    && msiexec /i AppleSoftwareUpdate.msi /qn \
+    && msiexec /i AppleApplicationSupport.msi  /qn \
+    && msiexec /i AppleApplicationSupport.msi  /qn \
+    && msiexec /i Bonjour.msi /qn \
+    && msiexec /i iTunes.msi /qn \
+    && rm -rf ~/.cache
 
-# And the shell script to start it:
-# #!/usr/bin/env bash
-# docker run -it --rm --name itunes \
-#        -e DISPLAY=$DISPLAY \
-#        -v /tmp/.X11-unix:/tmp/.X11-unix \
-#        --device /dev/snd --group-add audio \
-#        itunes:installed \
-#        wine /home/user/.wine/drive_c/Program\ Files/iTunes/iTunes.exe 
- 
