[iTunes] Clean up, fixed broken link in README

--- a/itunes/Dockerfile
+++ b/itunes/Dockerfile
@@ -12,7 +12,9 @@ RUN adduser -u 1001 user \
     && chown -R user:user $HOME
 
 RUN mkdir -p /extracted \
-    && cd /extracted && wget -q -O itunes-installer.exe https://secure-appldnld.apple.com/itunes12/091-81691-20180709-C98EBAE5-D5C5-41EC-9847-A5F71D9C4437/iTunesSetup.exe \
+    && cd /extracted \
+    && wget -q -O itunes-installer.exe \
+        https://secure-appldnld.apple.com/itunes12/091-81691-20180709-C98EBAE5-D5C5-41EC-9847-A5F71D9C4437/iTunesSetup.exe \
     && chown -R user:user /extracted
 
 RUN winetricks --self-update
@@ -25,8 +27,7 @@ RUN cd /extracted/  \
     && 7za e itunes-installer.exe  \
     && msiexec /i AppleSoftwareUpdate.msi /qn \
     && msiexec /i AppleApplicationSupport.msi  /qn \
-    && msiexec /i AppleApplicationSupport.msi  /qn \
     && msiexec /i Bonjour.msi /qn \
     && msiexec /i iTunes.msi /qn \
-    && rm -rf ~/.cache
+    && rm -rf ~/.cache /extracted/*
 
