--- a/dcoscli/Dockerfile
+++ b/dcoscli/Dockerfile
@@ -1,15 +1,12 @@
-FROM alpine:3.9
+FROM fedora:30
 MAINTAINER "nick@dischord.org"
 
-RUN apk --no-cache add \
-        ca-certificates
-
 ENV HOME /home/user
-RUN adduser -u 1000 -D user \
+RUN adduser -u 1000 user \
         && mkdir -p $HOME/.dcos \
         && chown -R user:user $HOME
 
-RUN wget -O /dcos https://downloads.dcos.io/cli/releases/binaries/dcos/linux/x86-64/latest/dcos \
+RUN curl https://downloads.dcos.io/binaries/cli/linux/x86-64/0.8.0/dcos -o /dcos \
     && chmod +x /dcos
 
 USER user
