--- a/neomutt/Dockerfile
+++ b/neomutt/Dockerfile
@@ -13,7 +13,7 @@ RUN adduser -u 1000 -D user \
 
 ENV LANG C.UTF-8
 
-ENV NEOMUTT_RELEASE 20180716
+ENV NEOMUTT_RELEASE 20200320
 
 RUN set -x \
         && apk add --no-cache --virtual .build-deps \
@@ -39,17 +39,17 @@ RUN set -x \
                 pkgconf \
                 tar \
 	&& update-ca-certificates \
-        && wget "https://github.com/neomutt/neomutt/archive/neomutt-${NEOMUTT_RELEASE}.tar.gz" -P /tmp/ \
-        && wget  "https://github.com/neomutt/neomutt/archive/neomutt-${NEOMUTT_RELEASE}.zip" -P /tmp/ \
-        && wget  "https://github.com/neomutt/neomutt/releases/download/neomutt-${NEOMUTT_RELEASE}/neomutt-${NEOMUTT_RELEASE}-CHECKSUM" -P /tmp/ \
+        && wget "https://github.com/neomutt/neomutt/archive/${NEOMUTT_RELEASE}.tar.gz" -P /tmp/ \
+        && wget  "https://github.com/neomutt/neomutt/archive/${NEOMUTT_RELEASE}.zip" -P /tmp/ \
+        && wget  "https://github.com/neomutt/neomutt/releases/download/${NEOMUTT_RELEASE}/${NEOMUTT_RELEASE}-CHECKSUM" -P /tmp/ \
         && export GNUPGHOME="$(mktemp -d)" \
         && gpg --keyserver ipv4.pool.sks-keyservers.net --recv-keys 86C2397270DD7A561263CA4E5FAF0A6EE7371805 \
-        && gpg --batch --verify /tmp/neomutt-${NEOMUTT_RELEASE}-CHECKSUM \
-        && cd /tmp/ && sha256sum -c /tmp/neomutt-${NEOMUTT_RELEASE}-CHECKSUM \
-        && rm -rf "$GNUPGHOME" /tmp/neomutt-${NEOMUTT_RELEASE}-CHECKSUM \
+        && gpg --batch --verify /tmp/${NEOMUTT_RELEASE}-CHECKSUM \
+        && cd /tmp/ && sha256sum -c /tmp/${NEOMUTT_RELEASE}-CHECKSUM \
+        && rm -rf "$GNUPGHOME" /tmp/${NEOMUTT_RELEASE}-CHECKSUM \
         && mkdir -p /usr/src/neomutt \
-        && tar -xf /tmp/neomutt-${NEOMUTT_RELEASE}.tar.gz -C /usr/src/neomutt --strip-components 1 \
-        && rm /tmp/neomutt* \
+        && tar -xf /tmp/${NEOMUTT_RELEASE}.tar.gz -C /usr/src/neomutt --strip-components 1 \
+        && rm /tmp/${NEOMUTT_RELASE}* \
         && cd /usr/src/neomutt \
         && gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)" \
         && ./configure \
@@ -67,7 +67,7 @@ RUN set -x \
                         | sort -u \
                         | awk 'system("[ -e /usr/local/lib/" $1 " ]") == 0 { next } { print "so:" $1 }' \
         )" \
-        && apk add --no-cache --virtual .neomutt-rundeps $runDeps vim msmtp w3m \
+        && apk add --no-cache --virtual .neomutt-rundeps $runDeps msmtp neovim ncurses poppler-utils vim w3m \
         && apk del .build-deps
 
 WORKDIR $HOME
