--- a/openstack/Dockerfile
+++ b/openstack/Dockerfile
@@ -1,5 +1,5 @@
 # OpenStack CLI container image
-FROM alpine:3.10
+FROM alpine:3.11
 
 LABEL maintainer="nick@dischord.org"
 
@@ -8,26 +8,28 @@ RUN apk --no-cache add \
 
 ENV HOME /home/user
 RUN adduser -u 1001 -D user \
-        && mkdir -p $HOME \
-        && chown -R user:user $HOME
+    && mkdir -p $HOME \
+    && chown -R user:user $HOME
 
 ENV LANG C.UTF-8
 
 RUN set -x \
-    && apk add --update \
-       python \
-       python-dev \
-       py-pip \
-       ca-certificates \
-       build-base \
-       libffi-dev \
-       openssl-dev \
-    && pip install \
-       python-openstackclient \
-       python-novaclient \
-       python-neutronclient \
-       python-magnumclient \
-       python-octaviaclient
+    && apk add --no-cache --update \
+    python3 \
+    python3-dev \
+    ca-certificates \
+    build-base \
+    libffi-dev \
+    openssl-dev \
+    && python3 -m ensurepip \
+    && rm -r /usr/lib/python*/ensurepip \
+    && pip3 install --upgrade --no-cache-dir \
+    pip setuptools \
+    python-openstackclient \
+    python-novaclient \
+    python-neutronclient \
+    python-magnumclient \
+    python-octaviaclient
 
 WORKDIR $HOME
 
